# EEP

./: .gitignore  fiveserver.config.js  go.mod
Desenvolvimento Web/Tarefa-01/: Bolo.html  Curriculo.html  Receitas.html
Desenvolvimento Web/Tarefa-02/: biografia_inicio.css  biografia_inicio.html
Desenvolvimento Web/Tarefa-03/: index.html  style.css
Desenvolvimento Web/Tarefa-04/: Atividades.html  README.md  Sobre.html  contato.html  index.html  sobre.html
Desenvolvimento Web/Tarefa-05/: config.php  create.php  create_professor.php  dashboard.php  delete.php  delete_aluno.php  delete_professor.php  docker-compose.yml  edit.php  edit_professor.php  estilo.css  index.php  index_professores.php  inserir_usuarios.php  login.php  script_banco_dados.sql
Desenvolvimento Web/Tarefa-06/: Dockerfile  Integrantes.md  STUDY.md  docker-compose.yml
Lógica de programação/Tarefa-02/: 1_frase_na_tela.c  3_frases_assassinas.c  etiqueta.c  exercicios_combinados.md  juntar_tarefa.py  letra_grande.c  menu.c  pinheiro.c  quadrado.c
Lógica de programação/Tarefa-03/: exercicios_combinados.md  juntar.sh
Lógica de programação/Tarefa-04/: exercicios_combinados.md  juntar_tarefa.py
Lógica de programação/Tarefa-05/: exercicios_combinados.md
Lógica de programação/builds/: 9_pinheiro  frases_assassinas  letra_grande  pinheiro  quadrado  tabela_notas
Lógica de programação/extra/: pointers_1.c  pointers_1_1.c  pointers_2.c  pointers_2_1.c  pointers_3.c  pointers_4.c  pointers_5.c
Tarefa-01/: Curriculo.html  Receitas.html
api/: pyproject.toml
(+169 files in other folders)
